----------------------- 3.7.200 Release  [23-July-2019] -----------------------

23-July-2019
  # 1305 FUNCTION usergroups_getpath does not exist (build 200)

------------------------ 3.7.199 Release [8-July-2019] ------------------------

8-July-2019
  # featured (build 199)
  # rating (build 199)

------------------------ 3.7.198 Release [20-May-2019] ------------------------

5-June-2019
  # 3rd party plugin (build 198)

20-May-2019
  # Import weblinks (build 197)

----------------------- 3.7.196 Release [15-April-2019] -----------------------

15-April-2019
  # Uncaught ReferenceError: Joomla is not defined (build 196)

12-April-2019
  # version check (build 195)
  # sender LIB_J2XML_MSG_USER_SKIPPED (build 195)

----------------------- 3.7.194 Release  [1-March-2019] -----------------------

1-March-2019
  # xmlrpc gzip (build 194)

20-February-2019
  + J2XML Pro (build 193)

13-February-2019
  + view levels (build 192)
  - backlink (build 192)
  - clean (build 192)

--------------------- 3.7.191 Release  [11-February-2019] ---------------------

11-February-2019
  ^ import super users (build 191)
  + import user notes (build 191)
  + menus (build 190)
  + modules (build 190)

--------------------- 3.7.189 Release  [10-February-2019] ---------------------

10-February-2019 
  ^ Joomla! 3+ compatibility (build 189)
  - menus (build 189)
  - modules (build 189)
  ^ sender (build 188)

28-January-2019
  ^ log (build 187)
  ^ sender (build 187)

22-January-2019
  ^ case sensitive class names (build 186)

---------------------- 3.7.185 Release [5-November-2018] ----------------------

5-November-2018
  $ user notes (build 185)

16-August-2018
  ^ j2xml library 18.8.310 (build 183)
  + PostgresSQL compatibility (build 183) 

14-August-2018
  - XmlrpcLogger (build 182)

----------------------- 3.7.181 Release [6-August-2018] -----------------------

6-August-2018
  + minify.js (build 181)
  # encoding (build 181)
