@@ -27,7 +27,7 @@ require_once JPATH_ADMINISTRATOR . '/components/com_j2xml/helpers/j2xml.php';
 /**
  * Controller class.
  *
- * @version 3.7.200
+ * @version 3.7.201
  * @since 3.6.160
  */
 class J2XMLControllerCpanel extends JControllerLegacy
@@ -138,6 +138,7 @@ class J2XMLControllerCpanel extends JControllerLegacy
 
 				$iparams->set('filename', $filename);
 				$iparams->set('version', (string) $xml['version']);
+				$iparams->set('keep_user_id', $params->get('keep_id', 0));
 				$iparams->set('categories', $params->get('import_categories', 1));
 				$iparams->set('contacts', $params->get('import_contacts', 1));
 				$iparams->set('fields', $params->get('import_fields', 1));
